--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -22,11 +22,12 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v2
       -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
+        name: Log into GitHub Container Registry
+        uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - 
         name: Set tag name
         run: |
@@ -40,5 +41,5 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: b4bz/homer:${{env.IMAGE_TAG}}
+          tags: ghcr.io/${{ github.repository }}:${{env.IMAGE_TAG}}
           platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
